// Vitest Snapshot v1

exports[`calculates last 30 tool replacements > after machine 4 changes 1`] = `
Map {
  "MC #4" => Map {
    "5" => {
      "replacements": [
        {
          "cntAtReplacement": null,
          "pocket": 2,
          "tool": "bbb",
          "type": "ReplaceBeforeCycleStart",
          "useAtReplacement": 5,
        },
        {
          "cntAtReplacement": null,
          "pocket": 4,
          "tool": "aaa",
          "type": "ReplaceBeforeCycleStart",
          "useAtReplacement": 77,
        },
      ],
      "time": 2022-10-28T03:04:05.000Z,
    },
  },
}
`;

exports[`calculates last 30 tool replacements > after machine 6 changes 1`] = `
Map {
  "MC #4" => Map {
    "3" => {
      "replacements": [
        {
          "cntAtReplacement": null,
          "pocket": 1,
          "tool": "aaa",
          "type": "ReplaceBeforeCycleStart",
          "useAtReplacement": 40,
        },
        {
          "pocket": 2,
          "tool": "bbb",
          "totalCntAtBeginningOfCycle": null,
          "totalCntAtEndOfCycle": null,
          "totalUseAtBeginningOfCycle": 39,
          "totalUseAtEndOfCycle": 5,
          "type": "ReplaceInCycle",
        },
      ],
      "time": 2022-09-25T03:24:05.000Z,
    },
  },
  "MC #6" => Map {
    "4" => {
      "replacements": [
        {
          "cntAtReplacement": null,
          "pocket": 1,
          "tool": "aaa",
          "type": "ReplaceBeforeCycleStart",
          "useAtReplacement": 140,
        },
        {
          "cntAtReplacement": null,
          "pocket": 2,
          "tool": "bbb",
          "type": "ReplaceBeforeCycleStart",
          "useAtReplacement": 150,
        },
        {
          "pocket": 3,
          "tool": "ccc",
          "totalCntAtBeginningOfCycle": null,
          "totalCntAtEndOfCycle": null,
          "totalUseAtBeginningOfCycle": 47,
          "totalUseAtEndOfCycle": 7,
          "type": "ReplaceInCycle",
        },
      ],
      "time": 2022-09-25T03:34:05.000Z,
    },
  },
}
`;

exports[`calculates last 30 tool replacements > tools 1`] = `
Map {
  "MC #4" => Map {
    "3" => {
      "replacements": [
        {
          "cntAtReplacement": null,
          "pocket": 1,
          "tool": "aaa",
          "type": "ReplaceBeforeCycleStart",
          "useAtReplacement": 40,
        },
        {
          "pocket": 2,
          "tool": "bbb",
          "totalCntAtBeginningOfCycle": null,
          "totalCntAtEndOfCycle": null,
          "totalUseAtBeginningOfCycle": 39,
          "totalUseAtEndOfCycle": 5,
          "type": "ReplaceInCycle",
        },
      ],
      "time": 2022-09-25T03:24:05.000Z,
    },
  },
}
`;
